--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "devDependencies": {
+    "child_process": "^1.0.2",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "ngrok": "^4.3.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1"
   }
 }
